<resources>
    <string name="app_name">JTalk</string>
    <string name="username">username</string>
    <string name="text">text</string>
    <string name="name">Name</string>
    <string name="search">search</string>
    <string name="add_friend">Add Friend</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="send">send</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">email</string>
    <string name="profile">profile</string>
    <string name="done">done</string>
    <string name="cancel">cancel</string>
    <string name="sign_out">Sign Out</string>
    <string name="password">password</string>

</resources>